Add: webpack - sass 컴파일을 위한 초기설정 추가

--- a/index.html
+++ b/index.html
@@ -4,8 +4,25 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>study js, 2020</title>
+  <link href="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.css" rel="stylesheet">
+  <!-- <script src="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.js"></script> -->
 </head>
 <body>
-  <h1>hello :D</h1>
+  <header>
+    <h1>hello :D</h1>
+  </header>
+  <main>
+    <div>
+      <h2>material test</h2>
+      <button class="mdc-button foo-button">
+        <div class="mdc-button__ripple"></div>
+        <span class="mdc-button__label">Button</span>
+      </button>
+    </div>
+    <div class="box1">
+      <h2>scss test</h2>
+      <p>글씨 크기 30</p>
+    </div>
+  </main>
 </body>
 </html>
